# rellr

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  rellr.json
.github/workflows/: release.yml
examples/: Cargo.toml  cliff.toml  rellr.json
examples/npm/: package.json
src/: main.rs
src/commands/: feat.rs  fix.rs  init.rs  mod.rs  next.rs  release.rs  reset.rs
src/libs/: changelog.rs  git.rs  helpers.rs  mod.rs  msg.rs  project_config.rs
