[package]
name = "rellr"
version = "0.0.0"
edition = "2021"
description = "Command line tool to automate the release creation process"
repository = "https://github.com/lacodda/rellr.git"
authors = ["Kirill Lakhtachev <lahtachev@gmail.com> (https://lacodda.com)"]
readme = "README.md"
license = "MIT"
keywords = ["cli", "tool", "release"]
categories = ["cli"]

[dependencies]
path-absolutize = "3.1.1"
regex = "1.10.2"
